# optimo

./: .env  .gitignore  README.md  docker-compose.yml  lib.sql
api_flask/: Dockerfile  app.py  models.py  pyproject.toml  requirements.txt  routes.py
backend_django/: Dockerfile  pyproject.toml  requirements.txt  run_beat.sh  run_worker.sh
backend_django/backend/backend/: celery.py  settings.py  urls.py
backend_django/users/: serializers.py  urls.py  views.py
